@@ -74,9 +74,8 @@ public class ChangeRequestValidationService {
     }
 
     private List<ValidationRule<ChangeRequestValidationContext>> getAttestationUpdateValidations() {
-        return new ArrayList<ValidationRule<ChangeRequestValidationContext>>(Arrays.asList(
-                new AttestationModificationValidation(),
-                new AttestationStatusUpdateValidation()));
+        return new ArrayList<ValidationRule<ChangeRequestValidationContext>>(List.of(
+                new AttestationValidation()));
     }
 
     private Boolean isNewChangeRequest(ChangeRequestValidationContext context) {
